--- a/src/fieldz.css
+++ b/src/fieldz.css
@@ -20,7 +20,7 @@
 .textInput {
   border-radius: 4px;
   border: 1px solid #ccc;
-  padding: .2rem .4rem;
+  padding: .5rem;
   margin: .1rem 0;
   font-size: 1rem;
   box-sizing: border-box;
